--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-
+    "start": "node server.js",
+    "watch": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -20,10 +19,12 @@
   },
   "homepage": "https://github.com/MatildadDS/resume#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "multiparty": "^4.2.2",
     "node": "^16.0.0",
-    "nodemailer": "^6.6.0"
+    "nodemailer": "^6.6.0",
+    "nodemon": "^2.0.7"
   }
 }
