--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multiparty": "^4.2.2",
     "node": "^16.0.0",
     "nodemailer": "^6.6.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sass": "^1.32.12"
   }
 }
