--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "resume",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon server.js"
@@ -18,14 +18,7 @@
     "url": "https://github.com/MatildadDS/resume/issues"
   },
   "homepage": "https://github.com/MatildadDS/resume#readme",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "multiparty": "^4.2.2",
-    "node": "^16.0.0",
-    "nodemailer": "^6.6.0",
-    "nodemon": "^2.0.7",
+  "dependencies": {  
     "sass": "^1.32.12"
   }
 }
